Mainmenu z-index Bugfix

--- a/wp-content/themes/rettungs-gasse/dev-assets/css/src/header.scss
+++ b/wp-content/themes/rettungs-gasse/dev-assets/css/src/header.scss
@@ -176,3 +176,7 @@
 .dropdown-toggle::after {
 	display: none;
 }
+
+#rettungsgasse-mainmenu {
+	z-index: 999;
+}
