--- a/wp-content/themes/rettungs-gasse/dev-assets/css/theme.css
+++ b/wp-content/themes/rettungs-gasse/dev-assets/css/theme.css
@@ -9959,6 +9959,9 @@ a.text-dark:hover, a.text-dark:focus {
 .dropdown-toggle::after {
   display: none; }
 
+#rettungsgasse-mainmenu {
+  z-index: 999; }
+
 h1, h2, h3, h4, h5, h6 {
   color: #014979; }
 
